--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body{
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        background-color: #36393f;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
     <noscript>
